crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/tests/snapshots/utterance_parsing_tests__error_space_instead_of_tab.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/single_item/tests/utterance.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: MissingMainTier,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "",
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expected: [],
                        found: "",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Could not find main_tier node in parse tree",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E301",
                ),
            },
        ],
    },
)
